test_programs/compile_failure/noirc_frontend_tests_cannot_determine_type_of_generic_argument_in_function_call_when_it_is_a_numeric_generic/src/main.nr

    struct Foo<let N: u32> {
        array: [Field; N],
    }

    impl<let N: u32> Foo<N> {
        fn new() -> Self {
            Self { array: [0; N] }
        }
    }

    fn foo<let N: u32>() -> Foo<N> {
        Foo::new()
    }

    fn main() {
        let _ = foo();
    }
    